--- a/apps/admin-portal/src/styles.scss
+++ b/apps/admin-portal/src/styles.scss
@@ -1,1 +1,8 @@
 /* You can add global styles to this file, and also import other style files */
+body,html {
+    margin: 0px !important;
+    height: 100%;
+}
+#root {
+    height: 100%;
+}
