--- a/libs/auth/src/lib/auth.module.scss
+++ b/libs/auth/src/lib/auth.module.scss
@@ -5,3 +5,97 @@
  * .container {
  * }
 */
+.container {
+    
+    margin: 0px;
+    padding: 0px;
+    display: flex;
+    flex-wrap: wrap;
+    height: 100%;
+    .auth-section-left {
+        background-color: #683b3b;
+        width: 60%;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        flex-direction: column;
+        .heading {
+             font-size: 50px; 
+             color:#3e0909;  
+        }
+        .sub-heading{
+             font-size: 24px;   
+             color:#3e0909;
+        }
+    }
+
+       .auth-section-right {
+        background-color: #e2d2d2;
+        width: 40%;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        
+    }
+    .white {
+        color: white;
+    }
+}
+
+
+@media screen and (min-width: 1000px) {
+    .auth-section-mobile {
+        display: none !important;
+    }
+}
+
+@media screen and (max-width: 1000px) {
+    .auth-section-left {
+        width: 50% !important;
+    }
+    .auth-section-right {
+        width: 50% !important;
+    }
+    .auth-section-mobile {
+        display: none !important;
+    }
+}
+
+@media screen and (max-width: 700px) {
+    .auth-section-left {
+            // width: 50% !important;
+            display: none !important;
+           
+    }
+    .auth-section-right {
+        width: 100% !important;
+        height: 80%;
+    }
+    .auth-section-mobile {
+        display: block !important;
+        height: 20%;
+        background-color: #683b3b;
+        padding-top: 24px;
+        .heading {
+            font-size: 50px; 
+            color: #3e0909;  
+            display: flex;
+            justify-content: center;
+            align-items: center;
+       }
+       .sub-heading{
+            font-size: 24px;   
+            color:#3e0909;
+            display: flex;
+            justify-content: center;
+            align-items: center;
+       }
+    }
+    .container{
+        display: flex;
+        flex-wrap: nowrap;
+        flex-direction: column;
+        height: 100%;
+    }
+}
+
